elasticsearch_studyNotes